# fund-prism

./: .env.example  .gitignore  AGENTS.md  AI-oriented开源个人基金研究平台需求书_v0.4.md  README.md  pyproject.toml  start.bat  start.command
.github/workflows/: ci.yml
config/: alembic.ini  field_mapping_v0.1.yaml  metrics_registry_template.yaml
data/samples/: active_equity_candidates.csv  active_equity_candidates_v2.csv  fund_universe_raw.csv  sample_funds_v0.1.csv
docs/: audit_report_20260704.md  frontend_backend_mismatch_report.md  handoff-2026-06-08.md  handoff-bugfix-20260701.md  phase-0-data-availability.md  phase1_phase2_audit_report.html  pre_phase3_plan.md
docs/phase0/: akshare-field-inventory-p0.json  algorithm-feasibility.md  conclusion.md  disclosure_granularity.csv  fetch_log.csv  industry_summary.csv  nav_quality.csv  official-source-paths.md  pre_phase1_readiness.json  pre_phase1_readiness.md  progress-report-2026-06-04.md  quality_baseline_summary.json  source-risk-register.md
docs/phase1/: completion_report.md  requirements-supplement.md  requirements.md
docs/phase2/: benchmark-industry-design.md  benchmark-industry-validation.md  dynamic-attribution-real-sample-validation.md  handoff-p2b.md  handoff-p2c.md  p2b_validation_report.md  p2c_acceptance.md  p2c_acceptance_report.md  p2d-dynamic-attribution-validation.md  phase2-gap-analysis.md  requirements.md  scoring-backtest-validation.md  simulated-holding-disclosure-backtest.md  simulated_holding_ab_penalty_test.json
docs/phase3-dev-plan/: phase3-dev-plan.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+2 more)
scripts/: backfill_2021_2023_data.py  backfill_benchmark_history.py  backfill_benchmark_qdates.py  backfill_csi500_stock_daily.py  backfill_historical_holdings.py  backfill_holding_ind.py  backfill_industry_exposure.py  backfill_manager_holder.py  backfill_real_benchmark_history.py  backfill_scoring_dimensions.py  backfill_stock_daily.py  backfill_stock_daily_fund.py  check_benchmarks.py  check_bw.py  check_codes.py  check_db_contents.py  check_dyn_errors.py  check_forward_returns.py  check_holding_ind.py  check_ind_membership.py  check_per_date_ic.py  check_progress.py  check_seq.py  check_simulated_holding_coverage.py  check_single_point_dimensions.py  check_stock_codes.py  check_stock_ind.py  check_weight_cov.py  clean_stale_experiments.py  debug_dyn.py  desc_bw.py  desc_exp.py  desc_res.py  diagnose_backtest_dimensions.py  diagnose_dimension_ic.py  diagnose_scoring_coverage.py  final_validation.py  full_dimension_backtest.py  phase2_status.py  probe_akshare_fields.py  (+28 more)
tests/: __init__.py  conftest.py
(+182 files in other folders)
