[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fund-research"
version = "0.1.0"
description = "AI-oriented 开源个人基金研究平台 — 可信研究底座"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
authors = [
    {name = "Jzr", email = "jzr@example.com"},
]
keywords = ["fund", "research", "china", "mutual-fund", "ai", "quantitative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # --- 数据分析核心 ---
    "pandas>=2.1",
    "polars>=1.0",
    "numpy>=1.26",
    "scipy>=1.12",

    # --- 统计建模 ---
    "statsmodels>=0.14",
    "scikit-learn>=1.4",

    # --- 优化求解 ---
    "cvxpy>=1.4",

    # --- 数据库与存储 ---
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "duckdb>=1.0",
    "duckdb-engine>=0.13",
    "sqlite-utils>=3.36",

    # --- API 与 Schema ---
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # --- 数据采集 ---
    "akshare>=1.14",

    # --- 可视化 ---
    "plotly>=5.22",

    # --- 工具 ---
    "httpx>=0.27",
    "python-dateutil>=2.8",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "rich>=13.7",
    "typer>=0.12",
    "tqdm>=4.66",

    # --- 定时任务 ---
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "matplotlib>=3.8",
]

agent = [
    "mcp>=1.0",
    "openai>=1.30",
]

[project.scripts]
fund-research = "fund_research.cli.main:app"

[project.urls]
Homepage = "https://github.com/jerry9692/fund-prism"
Documentation = "https://github.com/jerry9692/fund-prism"
Repository = "https://github.com/jerry9692/fund-prism"

[tool.hatch.build.targets.wheel]
packages = ["src/fund_research"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=fund_research --cov-report=term-missing"
